Web/3. Sticky Vertical Navbar/styles.css
@import url(../misc/base.css);

html, * {
    scroll-behavior: smooth;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    min-width: 75px;
    width: 350px;
    height: 100%;
    transition: width .4s ease;
}
nav.vertical-nav {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    justify-content: space-between;
    padding: 30px 30px;
    border-right: 2px solid var(--color-light-pink);
    background-color: var(--color-darker-gray);
    position: relative;
}
nav.horizontal-nav {
    width: 100vw;
    height: 70px;
    position: absolute;
    padding: 0 20px;
    display: flex;
    align-items: center;
    background-color: var(--color-darker-gray);
}
.nav-links-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
}
main {
    width: 100%;
    height: 100%;
}

.logo img {
    height: 100%;
    display: block;
}
.logo {
    margin-bottom: 40px;
    height: 40px;
    position: relative;
}

.nav-link {
    border-radius: 3px;
    transition: 0.2s ease;
    color: var(--color-light-gray);
    text-transform: uppercase;
    font-size: 18px;
    font-weight: bold;
    letter-spacing: 2px;
    overflow: hidden;
}

.nav-link:hover{
    background-color: #F2C4CE;
    color: #373737;
}

section {
    height: 100%;
    width: 100%;
    padding-left: 348px;
}


.nav-lower {
    display: flex;
    align-items: center;
    gap: 15px;
    max-height: 50px;
}

.profile-pic {
    max-height: 50px;
    aspect-ratio: 1;
    border-radius: 50%;
    
}
.profile-pic img {
    max-height: 100%;
    display: block;
    border-radius: 50%;
    border: 2px solid var(--color-light-gray);
}
.profile-name {
    display: flex;
    flex-direction: column;
    gap: 3px;
}
.username {
    font-size: 16px;
    letter-spacing: 1px;
}
.details {
    font-size: 15px;
    opacity: .6;
    letter-spacing: 1px;
    font-style: italic;
}
.icon {
    font-size: 35px !important;
    width: 50px;
    aspect-ratio: 1;
    display: flex !important;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
}
.nav-link a {
    display: flex;
    align-items: center;
}
.nav-link .nav-hide {
    margin-left: 15px;
}
.nav-hide {
    margin-top: 5px;
    width: 100%;
    /* min-width: max-content; */
    overflow: hidden;
    transition:  .4s ease;
    white-space: nowrap;
}
.icon-menu {
    position: absolute;
    width: 40px;
    background-color: var(--color-light-pink);
    border-radius: 50%;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-darker-gray);
    top: 30px;
    right: -20px;
    cursor: pointer;
    display: none;
    z-index: 5;
}
.icon-menu span {
    font-size: 40px !important;
    margin-left: 2px;
}
.visible {
    width: 350px;
    max-width: calc(100% - 20px);
}
.visible .nav-hide {
    min-width: max-content;
}
.visible .logo img {
    left: 0;
}
.active {
    margin: 0 !important;
}
@media screen and (max-width:1250px) {
    header {
        width: 90px;
    }
    section {
        padding-left: 88px;
    }
    nav.vertical-nav {
        padding: 30px 20px;
    }
    .nav-hide {
        width: 100%;
    }
    .icon-menu {
        display: initial;
    }
    .logo img {
        position: absolute;
        left: calc(-150px - 30px);
        transition: .4s ease
    }
}
@media screen and (max-width:550px) {
    header {
        width: 350px;
        max-width: 100%;
        
    }
    nav.vertical-nav {
        left: -100%;
        transition: left .4s ease;
        padding: 20px;
    }
    .visible {
        width: 350px;
        max-width: 100%;
    }
    .visible .vertical-nav {
        left: 0;
    }
    .icon-menu {
        right: 20px;
        top: 20px;
    }
    section {
        padding-left: 0;
    }
    
}

.mobile-menu {
    width: 50px;
    aspect-ratio: 1;
    display: grid;
    align-items: center;
    cursor: pointer;
}
.mobile-menu span {
    font-size:  40px !important;
}

.placeholder-img {
    width: 100%;
    margin: 25px;
    max-width: 700px;
    border: 2px solid var(--color-light-pink);
}
section {
    display: flex;
    align-items: center;
    justify-content: center;
}
.placeholder-img img {
    max-width: 100%;
    display: block;
    width: 100%;
}

